# ocaml-crunch

./: .gitignore  .merlin  .ocamlformat  .travis-ci.sh  .travis.yml  CHANGES  CHANGES.md  Makefile  README.md  _oasis  _tags  crunch.opam  dune-project  index.html  mirage-fs.install  myocamlbuild.ml  ocaml-crunch.install  opam  setup.ml
.github/workflows/: main.yml
crunch/: META  Makefile  crunch.ml  index.html
crunch/Crunch/: index.html
crunch_test/: Makefile
lib/: META  crunch.ml  crunch.mldylib  crunch.mli  libmir-crunch_stubs.clib  main.ml
lib_test/: Makefile
pkg/: META  pkg.ml
src/: crunch.ml  crunch.mli  dune  jbuild  main.ml  realpath.pre_413.ml  realpath.unix.ml
test/: .gitattributes  .ocamlformat-ignore  consumer.ml  dune  jbuild  t1.expected.ml  t1.expected.mli  t1_plain.expected.ml  t1_plain_ext.expected.ml  test.ml
test/consumer/: consumer.ml
test/t1/: c  d
test/t1/e/: f
