opam-version: "2.0"
maintainer:   "anil@recoil.org"
authors:      ["Anil Madhavapeddy" "Thomas Gazagnaire"]
homepage:     "https://github.com/mirage/ocaml-crunch"
bug-reports:  "https://github.com/mirage/ocaml-crunch/issues"
license:      "ISC"
dev-repo:     "git+https://github.com/mirage/ocaml-crunch.git"
tags:         ["org:mirage" "org:xapi-project"]

depends: [
  "ocaml" {>= "4.04.2"}
  "cmdliner"
  "dune" {build & >= "1.0"}
  "cstruct" {with-test}
  "lwt" {with-test}
  "mirage-kv-lwt" {with-test & >= "1.0.0"}
  "io-page-unix" {with-test}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "Convert a filesystem into a static OCaml module"
