(library
 (name crunch)
 (wrapped false)
 (synopsis "Compile static files into a static filesystem")
 (modules crunch)
 (public_name crunch)
 (libraries unix ptime)
 (flags :standard -safe-string))

(executable
 (name main)
 (modules main)
 (public_name ocaml-crunch)
 (libraries cmdliner crunch)
 (flags :standard -safe-string))
