(library
 ; Dummy library to detect the OCaml version
 (name realpath)
 (modules)
 (enabled_if
  (< %{ocaml_version} "4.13")))

(library
 (name crunch)
 (wrapped false)
 (synopsis "Compile static files into a static filesystem")
 (modules crunch)
 (public_name crunch)
 (libraries unix ptime)
 (flags :standard -safe-string))

(executable
 (name main)
 (modules main realpath)
 (public_name ocaml-crunch)
 (libraries
  cmdliner
  crunch
  (select
   realpath.ml
   from
   (realpath -> realpath.pre_413.ml)
   (-> realpath.unix.ml))))
